force-app/main/default/objects/SchedulomaticEntry__c/SchedulomaticEntry__c.object-meta.xml
<CustomObject>
    <description
  >A configuration record for a job scheduled by the Schedul-o-matic 9000. Entries must be owned by an active user for successful execution.</description>
    <label>Schedul-o-matic Entry</label>
    <nameField>
        <label>Schedul-o-matic Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedul-o-matic Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>