force-app/main/default/objects/SchedulomaticEntry__c/fields/AnonymousCode__c.field-meta.xml
<CustomField>
  <fullName>AnonymousCode__c</fullName>
  <label>Anonymous Code</label>
  <length>13000</length>
  <type>LongTextArea</type>
</CustomField>