force-app/main/default/objects/SchedulomaticEntry__c/fields/AsyncApexJobId__c.field-meta.xml
<CustomField>
  <fullName>AsyncApexJobId__c</fullName>
  <label>Async Apex Job Id</label>
  <length>18</length>
  <type>Text</type>
</CustomField>