force-app/main/default/objects/SchedulomaticEntry__c/fields/BatchSize__c.field-meta.xml
<CustomField>
  <fullName>BatchSize__c</fullName>
  <label>Batch Size</label>
  <precision>4</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>