force-app/main/default/objects/SchedulomaticEntry__c/fields/Class__c.field-meta.xml
<CustomField>
  <fullName>Class__c</fullName>
  <label>Class</label>
  <length>40</length>
  <type>Text</type>
</CustomField>