force-app/main/default/objects/SchedulomaticEntry__c/fields/DailyEnd__c.field-meta.xml
<CustomField>
  <fullName>DailyEnd__c</fullName>
  <label>Daily End</label>
  <type>Date</type>
</CustomField>