force-app/main/default/objects/SchedulomaticEntry__c/fields/DailyStartDateTime__c.field-meta.xml
<CustomField>
  <fullName>DailyStartDateTime__c</fullName>
  <label>Daily Start Date &amp; Time</label>
  <required>true</required>
  <type>DateTime</type>
</CustomField>