force-app/main/default/objects/SchedulomaticEntry__c/fields/ExecutionError__c.field-meta.xml
<CustomField>
    <fullName>ExecutionError__c</fullName>
    <label>Execution Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>