force-app/main/default/objects/SchedulomaticEntry__c/fields/Flow__c.field-meta.xml
<CustomField>
  <fullName>Flow__c</fullName>
  <label>Flow</label>
  <length>80</length>
  <type>Text</type>
</CustomField>