force-app/main/default/objects/SchedulomaticEntry__c/fields/IsBatchable__c.field-meta.xml
<CustomField>
  <fullName>IsBatchable__c</fullName>
  <defaultValue>false</defaultValue>
  <label>Is Batchable</label>
  <type>Checkbox</type>
</CustomField>