force-app/main/default/objects/SchedulomaticEntry__c/fields/IsDaily__c.field-meta.xml
<CustomField>
  <fullName>IsDaily__c</fullName>
  <defaultValue>false</defaultValue>
  <label>Is Daily</label>
  <type>Checkbox</type>
</CustomField>