force-app/main/default/objects/SchedulomaticEntry__c/fields/IsSchedulable__c.field-meta.xml
<CustomField>
  <fullName>IsSchedulable__c</fullName>
  <defaultValue>false</defaultValue>
  <label>Is Schedulable</label>
  <type>Checkbox</type>
</CustomField>