force-app/main/default/objects/SchedulomaticEntry__c/fields/NumberOfExecutions__c.field-meta.xml
<CustomField>
  <fullName>NumberOfExecutions__c</fullName>
  <defaultValue>0</defaultValue>
  <label>Number of Executions</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>