force-app/main/default/objects/SchedulomaticEntry__c/fields/RepeatInterval__c.field-meta.xml
<CustomField>
  <fullName>RepeatInterval__c</fullName>
  <label>Repeat Interval</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>