force-app/main/default/objects/SchedulomaticEntry__c/fields/RescheduleInterval__c.field-meta.xml
<CustomField>
  <fullName>RescheduleInterval__c</fullName>
  <label>Reschedule Interval</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>