force-app/main/default/objects/SchedulomaticEntry__c/validationRules/Batch_size_valid.validationRule-meta.xml
<ValidationRule>
  <fullName>Batch_size_valid</fullName>
  <active>true</active>
  <errorConditionFormula>NOT(ISBLANK(BatchSize__c)) &amp;&amp;
(
  BatchSize__c &lt; 1 ||
  BatchSize__c != FLOOR(BatchSize__c)
)</errorConditionFormula>
  <errorDisplayField>BatchSize__c</errorDisplayField>
  <errorMessage>Batch size must be blank (to use the Salesforce default) or a positive whole number.</errorMessage>
</ValidationRule>