force-app/main/default/objects/SchedulomaticEntry__c/validationRules/Daily_end_date_valid.validationRule-meta.xml
<ValidationRule>
  <fullName>Daily_end_date_valid</fullName>
  <active>true</active>
  <errorConditionFormula>Start__c &gt;= DATETIMEVALUE(DailyEnd__c)</errorConditionFormula>
  <errorDisplayField>Start__c</errorDisplayField>
  <errorMessage>The start date &amp; time must be before the final end date.</errorMessage>
</ValidationRule>