force-app/main/default/objects/SchedulomaticEntry__c/validationRules/End_date_time_valid.validationRule-meta.xml
<ValidationRule>
  <fullName>End_date_time_valid</fullName>
  <active>true</active>
  <errorConditionFormula>Start__c &gt;= End__c</errorConditionFormula>
  <errorDisplayField>Start__c</errorDisplayField>
  <errorMessage>The start date &amp; time must be before the end date &amp; time.</errorMessage>
</ValidationRule>