force-app/main/default/objects/SchedulomaticEntry__c/validationRules/Is_Class_and_Batchable_or_Schedulable.validationRule-meta.xml
<ValidationRule>
  <fullName>Is_Class_and_Batchable_or_Schedulable</fullName>
  <active>true</active>
  <errorConditionFormula>NOT(ISBLANK(Class__c )) &amp;&amp;
(
  IsBatchable__c &amp;&amp; IsSchedulable__c ||
  !IsBatchable__c &amp;&amp; !IsSchedulable__c
)</errorConditionFormula>
  <errorMessage>A class must be either batchable or schedulable.</errorMessage>
</ValidationRule>