force-app/main/default/objects/SchedulomaticEntry__c/validationRules/Is_Class_Flow_or_Code.validationRule-meta.xml
<ValidationRule>
  <fullName>Is_Class_Flow_or_Code</fullName>
  <active>true</active>
  <errorConditionFormula>IF(ISBLANK(Class__c), 0, 1) +
IF(ISBLANK(Flow__c), 0, 1) +
IF(ISBLANK(AnonymousCode__c), 0, 1)
!= 1</errorConditionFormula>
  <errorMessage>An entry must include either a class, a flow, or an anonymous code block.</errorMessage>
</ValidationRule>