force-app/main/default/objects/SchedulomaticEntry__c/validationRules/Repeat_interval_valid.validationRule-meta.xml
<ValidationRule>
  <fullName>Repeat_interval_valid</fullName>
  <active>true</active>
  <errorConditionFormula>RepeatInterval__c &lt; 0 || FLOOR(RepeatInterval__c) != RepeatInterval__c</errorConditionFormula>
  <errorDisplayField>RepeatInterval__c</errorDisplayField>
  <errorMessage>Repeat interval must either be left empty (to run once) or a positive whole number.</errorMessage>
</ValidationRule>