force-app/main/default/objects/SchedulomaticEntry__c/validationRules/Reschedule_interval_valid.validationRule-meta.xml
<ValidationRule>
  <fullName>Reschedule_interval_valid</fullName>
  <active>true</active>
  <errorConditionFormula>NOT(ISBLANK(Class__c)) &amp;&amp;
(
  ISBLANK(RescheduleInterval__c) ||
  RescheduleInterval__c &lt; 1 ||
  FLOOR(RescheduleInterval__c) !=  RescheduleInterval__c
)</errorConditionFormula>
  <errorDisplayField>RescheduleInterval__c</errorDisplayField>
  <errorMessage>Reschedule interval must be a positive whole number.</errorMessage>
</ValidationRule>