force-app/main/default/objects/SchedulomaticEntry__c/validationRules/Start_date_time_valid.validationRule-meta.xml
<ValidationRule>
  <fullName>Start_date_time_valid</fullName>
  <active>true</active>
  <errorConditionFormula>ISBLANK(Start__c)</errorConditionFormula>
  <errorDisplayField>Start__c</errorDisplayField>
  <errorMessage>An entry must have a start date and time.</errorMessage>
</ValidationRule>