force-app/main/default/objects/SchedulomaticEntry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start__c</columns>
    <columns>Class__c</columns>
    <columns>Flow__c</columns>
    <columns>AnonymousCode__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>